<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Tracking</string>
    <string name="initial">Tracking Teltools</string>
    <string name="menu_settings">Settings</string>
    <string name="user">User</string>
    <string name="username">User Name</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="time">Time</string>
    <string name="save">Save</string>
    <string name="timeSave">Save</string>
    <string name="menu">"Menu"</string>
    <string name="register">"Register"</string>
    <string name="update">"Update"</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_trackeds">Trackeds</string>
</resources>